; ModuleID = '/home/carl/AnghaBench/redis/deps/jemalloc/src/extr_prof.c_prof_thread_active_init_set.c'
source_filename = "/home/carl/AnghaBench/redis/deps/jemalloc/src/extr_prof.c_prof_thread_active_init_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@prof_thread_active_init_mtx = common dso_local global i32 0, align 4
@prof_thread_active_init = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @prof_thread_active_init_set(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @malloc_mutex_lock(i32* %6, i32* @prof_thread_active_init_mtx)
  %8 = load i32, i32* @prof_thread_active_init, align 4
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %4, align 4
  store i32 %9, i32* @prof_thread_active_init, align 4
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @malloc_mutex_unlock(i32* %10, i32* @prof_thread_active_init_mtx)
  %12 = load i32, i32* %5, align 4
  ret i32 %12
}

declare dso_local i32 @malloc_mutex_lock(i32*, i32*) #1

declare dso_local i32 @malloc_mutex_unlock(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
